[package]
name = "sha3-ex"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["guest"]

[dependencies]
jolt-sdk = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["host"] }
guest = { package = "sha3-guest", path = "./guest" }

ark-std = "0.4"

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }

[features]
print-timers = ["ark-std/print-trace"]
default = ["print-timers"]