[workspace]
[package]
version = "0.1.0"
name = "keccak-native-publicinput-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v3.0.0" }
ark-std = "0.4"

[build-dependencies]
sp1-build = { git = "https://github.com/succinctlabs/sp1.git", tag = "v3.0.0"  }

[features]
print-timers = ["ark-std/print-trace"]
default = ["print-timers"]