[workspace]
[package]
version = "0.1.0"
name = "keccak-native-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v3.0.0"  }
sp1-derive = { git = "https://github.com/succinctlabs/sp1.git", tag = "v3.0.0"  }

sha3 = { git = "https://github.com/RustCrypto/hashes", package = "sha3", tag = "sha3/v0.10.8" }
hex = "0.4.3"
