[workspace]
[package]
version = "0.1.0"
name = "keccak-precompile-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v3.0.0"  }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes.git", package = "sha3", branch = "patch-sha3-v0.10.8" }
hex = "0.4.3"

[patch.crates-io]
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }
