[workspace]
[package]
version = "0.1.0"
name = "sha256-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v3.0.0"  }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes.git", package = "sha2", branch = "patch-v0.10.8" }
hex = "0.4.3"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }


[patch.'https://github.com/succinctlabs/sp1']
p3-air = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-field = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-util = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-blake3 = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
p3-bn254-fr = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }