[workspace]
[package]
version = "0.1.0"
name = "sha256-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v3.0.0" }
ark-std = "0.4"

[build-dependencies]
sp1-build = { git = "https://github.com/succinctlabs/sp1.git", tag = "v3.0.0"  }

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }

[features]
print-timers = ["ark-std/print-trace"]
default = ["print-timers"]